templates/posca_template.yaml
---
# Source: posca/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-posca
  namespace: default
  labels:
    helm.sh/chart: posca-1.0.0
    app.kubernetes.io/name: posca
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: posca
    app.kubernetes.io/instance: release-name
---
# Source: posca/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-posca
  namespace: default
  labels:
    helm.sh/chart: posca-1.0.0
    app.kubernetes.io/name: posca
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: posca
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/port: "4021"
        prometheus.io/scrape: "false"
      labels:
        app.kubernetes.io/name: posca
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      containers:
        - name: posca
          securityContext:
            {}
          image: "registry.gitlab.com/technostructures/posca/posca:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            {}
---
# Source: posca/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-posca
  namespace: default
  labels:
    helm.sh/chart: posca-1.0.0
    app.kubernetes.io/name: posca
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "posca.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-posca
                port:
                  number: 4000
